--- a/src/design/plone/theme/theme/sass/components/_portlets.scss
+++ b/src/design/plone/theme/theme/sass/components/_portlets.scss
@@ -3,7 +3,7 @@
 }
 
 .portletHeader {
-    border-bottom: 4px solid $gray-nav;
+    border-bottom: 4px solid $uniba;
     font-size: 2.1rem;
     font-weight: $semibold;
     padding: 0.8rem 0.3rem;
